--- a/app/views/finders/all_content_finder_facets/_sort_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_sort_facet.html.erb
@@ -4,6 +4,8 @@
   id: "facet_sort",
   index_section: index,
   index_section_count: count,
+  data_attributes: { "ga4-index": { index_section: index + 1, index_section_count: count } },
+  change_category: "update-filter radio",
 } do %>
   <%= render "govuk_publishing_components/components/radio", {
     heading: "Sort order",
