remove custom tracking from panel/sections and use expandable attribute

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -24,6 +24,7 @@
       id: button_id,
       class: "app-c-filter-panel__button govuk-link",
       aria: { expanded: "false", controls: panel_content_id },
+      "data-ga4-expandable": "",
       "data-ga4-event" => {
         event_name: "select_content",
         type: "finder",
