All content finder: Implement hidden clearable facet
This implements the hidden clearable facet for the new "all content"
finder UI. These are facets that are able to be used with the finder as
query parameters, and if used are shown to the user, but do not have UI
to manually select. We can have a much simpler implementation than the
existing finder UI because we do not need to consider Javascript.

--- a/app/views/finders/all_content_finder_facets/_hidden_clearable_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_hidden_clearable_facet.html.erb
@@ -1,1 +1,3 @@
-<%# TODO: Hidden clearable facet %>
+<% hidden_clearable_facet.value.each do |value| %>
+  <%= hidden_field_tag "#{hidden_clearable_facet.key}[]", value %>
+<% end %>
