--- a/app/views/components/_filter_section.html.erb
+++ b/app/views/components/_filter_section.html.erb
@@ -27,7 +27,8 @@
         type: "finder",
         section: heading_text,
         text: heading_text,
-        index: { index_section: index_section + 1, index_section_count: index_section_count },
+        index_section: index_section + 1,
+        index_section_count: index_section_count,
       }.to_json do %>
       <%= content_tag("h#{heading_level}", class: "app-c-filter-section__summary-heading") do %>
         <% if visually_hidden_heading_prefix.present? %>
