--- a/app/views/finders/all_content_finder_facets/_sort_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_sort_facet.html.erb
@@ -1,5 +1,6 @@
 <%= render "components/filter_section", {
   heading_text: sort_facet.name,
+  status_text: sort_facet.status_text,
   id: "facet_sort",
   index_section: index,
   index_section_count: count,
