--- a/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
@@ -1,6 +1,7 @@
 <%= render "components/filter_section", {
   heading_text: taxon_facet.name,
   visually_hidden_heading_prefix: "Filter by",
+  status_text: taxon_facet.status_text,
   id: "facet_taxon_#{taxon_facet.key}",
   index_section: index,
   index_section_count: count,
