--- a/app/views/components/_filter_summary.html.erb
+++ b/app/views/components/_filter_summary.html.erb
@@ -51,7 +51,7 @@
           event_name: "select_content",
           type: "finder",
           text: clear_all_text,
-          section: "Selected filters and sorting",
+          section: heading_text,
           action: "remove"
         }.to_json %>
       </div>
