Filter panel: Apply button should not have `name` attr
This causes the button's text to be added to the query parameters, which
we don't need and clutters up the analytics.

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -55,6 +55,7 @@
     <div class="app-c-filter-panel__actions">
       <%= submit_tag "Apply filters",
         class: "govuk-button app-c-filter-panel__action app-c-filter-panel__action--submit",
+        name: nil,
         "data-ga4-event" => {
           event_name: "select_content",
           type: "finder",
