All content finder: Improve spacing of page heading
- Move overall UI (except breadcrumbs) into a `app-all-content-finder`
  container
- Add margin to container on tablet+

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -373,3 +373,9 @@ mark {
   overflow: hidden;
   padding-top: govuk-spacing(3);
 }
+
+.app-all-content-finder {
+  @include govuk-media-query($from: tablet) {
+    margin-top: govuk-spacing(4);
+  }
+}
