--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -26,7 +26,7 @@
   display: flex;
   flex-wrap: wrap;
   place-content: space-between;
-  align-items: center;
+  align-items: baseline;
   gap: govuk-spacing(2);
 }
 
