--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -379,3 +379,8 @@ mark {
     margin-top: govuk-spacing(4);
   }
 }
+
+.app-all-content-finder__spelling-suggestions {
+  margin-top: -(govuk-spacing(2));
+  margin-bottom: govuk-spacing(5);
+}
