Filter section: Increase summary padding

--- a/app/assets/stylesheets/components/_filter-section.scss
+++ b/app/assets/stylesheets/components/_filter-section.scss
@@ -26,6 +26,7 @@
   cursor: pointer;
   color: $govuk-text-colour;
   list-style: none;
+  padding: govuk-spacing(1) 0;
   @include chevron;
 
   // Ensure default disclosure triangle does not get shown in browsers that aren't spec-conformant
