--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -88,7 +88,7 @@
               clear_all_href: filters_presenter.reset_url,
               clear_all_text: "Clear all filters",
               heading_level: 3,
-              heading_text: "Selected filters",
+              heading_text: "Active filters",
               filters: filters_presenter.summary_items,
             } %>
           <% end %>
