--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -2,7 +2,7 @@
 @import "mixins/chevron";
 
 .app-c-filter-panel {
-  padding-bottom: govuk-spacing(2);
+  padding: govuk-spacing(3) 0;
   margin-bottom: govuk-spacing(1);
   border-bottom: 1px solid $govuk-border-colour;
 }
@@ -11,6 +11,7 @@
   background-color:  govuk-colour("light-grey");
   padding: 0 govuk-spacing(3);
   margin-top: govuk-spacing(2);
+  margin-bottom: govuk-spacing(1);
 
   // GOV.UK Frontend radio and checkboxes are rendered with a transparent background, which makes
   // them look wrong on this component's grey background. This is intentional in GOV.UK Frontend and
