Filter panel/summary: Small styling fixes
- Fix missing border when filter summary is shown
- Fix slightly wonky padding when filter

--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -2,9 +2,7 @@
 @import "mixins/chevron";
 
 .app-c-filter-panel {
-  padding: govuk-spacing(3) 0;
-  margin-bottom: govuk-spacing(1);
-  border-bottom: 1px solid $govuk-border-colour;
+  padding-top: govuk-spacing(3);
 }
 
 .app-c-filter-panel__content {
