All content finder: Improve spelling suggestions
This moves the spelling suggestions to a `p` with appropriate styling,
and tweaks the margins that seem to have gotten lost in a previous
commit's squash!

--- a/app/assets/stylesheets/finder_frontend.scss
+++ b/app/assets/stylesheets/finder_frontend.scss
@@ -381,6 +381,5 @@ mark {
 }
 
 .app-all-content-finder__spelling-suggestions {
-  margin-top: -(govuk-spacing(2));
-  margin-bottom: govuk-spacing(5);
+  margin: govuk-spacing(2) 0;
 }
