--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -7,7 +7,7 @@
   index_section_count: count,
   # Note date is the only validated facet, so if there is an error, it'll be here
   open: @search_query.invalid?,
-  data_attributes: { "ga4-index": { index_section: index + 1, index_section_count: count } },
+  data_attributes: { ga4_index: { index_section: index + 1, index_section_count: count } },
   change_category: "update-filter text",
 } do %>
   <%= render "govuk_publishing_components/components/input", {
