--- a/app/views/finders/all_content_finder_facets/_option_select_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_option_select_facet.html.erb
@@ -7,7 +7,7 @@
   id: "facet_option_select_#{option_select_facet.key}",
   index_section: index,
   index_section_count: count,
-  data_attributes: { "ga4-index": { index_section: index + 1, index_section_count: count } },
+  data_attributes: { ga4_index: { index_section: index + 1, index_section_count: count } },
   change_category: "update-filter checkbox",
 } do %>
   <%= render "govuk_publishing_components/components/checkboxes", {
