--- a/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
@@ -5,7 +5,7 @@
   id: "facet_taxon_#{taxon_facet.key}",
   index_section: index,
   index_section_count: count,
-  data_attributes: { "ga4-index": { index_section: index + 1, index_section_count: count } },
+  data_attributes: { ga4_index: { index_section: index + 1, index_section_count: count } },
   change_category: "update-filter select",
   classes: "js-all-content-finder-taxonomy-select"
 } do %>
