--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -1,19 +1,9 @@
 <%= render "components/filter_section", {
-  heading_text: date_facet.name,
+  **date_facet.section_attributes,
   visually_hidden_heading_prefix: "Filter by",
-  status_text: date_facet.status_text,
-  id: "facet_date_#{date_facet.key}",
-  index_section: date_facet.section_index,
-  index_section_count: date_facet.section_count,
+  change_category: "update-filter text",
   # Note date is the only validated facet, so if there is an error, it'll be here
   open: @search_query.invalid?,
-  data_attributes: {
-    ga4_index: {
-      index_section: date_facet.section_index,
-      index_section_count: date_facet.section_count,
-    },
-  },
-  change_category: "update-filter text",
 } do %>
   <%= render "govuk_publishing_components/components/input", {
     label: {
