--- a/app/views/finders/all_content_finder_facets/_option_select_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_option_select_facet.html.erb
@@ -1,18 +1,8 @@
 <% add_gem_component_stylesheet("checkboxes") %>
 
 <%= render "components/filter_section", {
-  heading_text: option_select_facet.name,
+  **option_select_facet.section_attributes,
   visually_hidden_heading_prefix: "Filter by",
-  status_text: option_select_facet.status_text,
-  id: "facet_option_select_#{option_select_facet.key}",
-  index_section: option_select_facet.section_index,
-  index_section_count: option_select_facet.section_count,
-  data_attributes: {
-    ga4_index: {
-      index_section: option_select_facet.section_index,
-      index_section_count: option_select_facet.section_count,
-    },
-  },
   change_category: "update-filter checkbox",
 } do %>
   <%= render "govuk_publishing_components/components/checkboxes", {
