--- a/app/views/finders/all_content_finder_facets/_sort_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_sort_facet.html.erb
@@ -1,15 +1,5 @@
 <%= render "components/filter_section", {
-  heading_text: sort_facet.name,
-  status_text: sort_facet.status_text,
-  id: "facet_sort",
-  index_section: sort_facet.section_index,
-  index_section_count: sort_facet.section_count,
-  data_attributes: {
-    ga4_index: {
-      index_section: sort_facet.section_index,
-      index_section_count: sort_facet.section_count,
-    },
-  },
+  **sort_facet.section_attributes,
   change_category: "update-filter radio",
 } do %>
   <%= render "govuk_publishing_components/components/radio", {
