Taxon facet: Move from "Sub-topic" to "Subtopic"
This is our preferred spelling and should be reflected across the entire
UI.

--- a/app/views/finders/_taxon_facet.html.erb
+++ b/app/views/finders/_taxon_facet.html.erb
@@ -30,12 +30,12 @@
         options: taxon_facet.topics
       } %>
 
-      <div class="js-required govuk-form-group" data-ga4-section="Sub-topic">
+      <div class="js-required govuk-form-group" data-ga4-section="Subtopic">
         <%= render "govuk_publishing_components/components/select", {
           id: 'level_two_taxon',
-          label: "Sub-topic",
+          label: "Subtopic",
           full_width: true,
-          options: taxon_facet.sub_topics
+          options: taxon_facet.subtopics
         } %>
       </div>
     </div>
