Remove "disable autocomplete" feature flag
We are centralising the enabling/disabling of autocomplete in Search API
v2 so we don't need individual feature flags across several apps.

- Use search_with_autocomplete component directly
- Remove ApplicationHelper#search_component

--- a/app/views/search/_search_field.html.erb
+++ b/app/views/search/_search_field.html.erb
@@ -6,7 +6,7 @@
 } %>
 <% end %>
 
-<%= render "govuk_publishing_components/components/#{search_component}", {
+<%= render "govuk_publishing_components/components/search_with_autocomplete", {
   inline_label: false,
   label_text: label_text,
   size: "large",
