--- a/app/views/layouts/development_layout.html.erb
+++ b/app/views/layouts/development_layout.html.erb
@@ -1,7 +1,9 @@
 <% content_for :body do %>
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-      <%= yield %>
+  <div class="govuk-width-container">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
+        <%= yield %>
+      </div>
     </div>
   </div>
 <% end %>
