Fix inverse header layouts bug
- govuk-main-wrapper class adds 20px padding at the top of the page, which was pushing down the inverse (blue) header
- solution is to not add that class on these pages, restoring the original look

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -16,6 +16,7 @@
 
 <% if is_inverse? %>
   <% content_for :body_classes, "full-width" %>
+  <% content_for :main_element_class, true %>
 <% end %>
 
 <form method="get" action="<%= content_item.base_path %>" class="js-live-search-form"
