--- a/app/views/layouts/finder_layout.html.erb
+++ b/app/views/layouts/finder_layout.html.erb
@@ -1,8 +1,7 @@
 <% content_for :body do %>
-
   <%= yield :before_content %>
   <%= render "govuk_web_banners/recruitment_banner" %>
-  <main id="content" class="finder-frontend-content govuk-main-wrapper">
+  <main id="content" class="finder-frontend-content <%= 'govuk-main-wrapper' unless content_for?(:main_element_class) %>">
     <div class="finder-frontend">
       <%= yield %>
     </div>
